--- a/docs/npf_card_wind.yaml
+++ b/docs/npf_card_wind.yaml
@@ -72,7 +72,7 @@ series:
     show:
       in_legend: true
       legend_value: false
-  - entity: sensor.nordpool_kwh_fi_eur_3_10_0255
+  - entity: sensor.nordpool_kwh_fi_eur_3_10_0255 // VAT 25.5% sensor
     name: Nordpool toteutunut
     yaxis_id: price
     type: column
@@ -90,10 +90,12 @@ series:
       legend_value: false
     data_generator: |
       return [...entity.attributes.raw_today.map((start, index) => {
-                return [new Date(start["start"]).getTime(), entity.attributes.raw_today[index]["value"]*124];
+                // For VAT zero sensor replace 100 with 125.5 to match net price scaling
+                return [new Date(start["start"]).getTime(), entity.attributes.raw_today[index]["value"]*100];
              }),
              ...entity.attributes.raw_tomorrow.map((entry) => {
-                return [new Date(entry.start).getTime(), entry.value*124];
+                // For VAT zero sensor replace 100 with 125.5 to match net price scaling
+                return [new Date(entry.start).getTime(), entry.value*100];
              }),
              // Add a new entry for the day after tomorrow with a zero value
              [new Date(new Date().setDate(new Date().getDate() + 2)).setHours(0, 0, 0, 0), 0]
