--- a/custom_components/nordpool_predict_fi/manifest.json
+++ b/custom_components/nordpool_predict_fi/manifest.json
@@ -11,6 +11,5 @@
   "requirements": [],
   "config_flow": true,
   "iot_class": "cloud_polling",
-  "integration_type": "service",
-  "icon": "icon.png"
+  "integration_type": "service"
 }
