--- a/docs/npf_card_price.yaml
+++ b/docs/npf_card_price.yaml
@@ -1,10 +1,10 @@
 type: custom:apexcharts-card
 header:
   show: true
-  title: Hinta- ja tuulivoimaennuste
-  show_states: false
+  title: Sähkön hinta ja tuulivoima
+  show_states: true
   colorize_states: true
-  standard_format: false
+  standard_format: true
   disable_actions: true
 graph_span: 7d
 experimental:
@@ -12,34 +12,28 @@ experimental:
 span:
   start: hour
 now:
-  show: false
+  show: true
   color: "#1c88fb"
   label: Nyt
 series:
-  - entity: sensor.nordpool_predict_fi_upcoming_price
-    name: Senttiä per kWh
+  - entity: sensor.nordpool_predict_fi_price
+    name: Sähkön hinta
     type: line
     yaxis_id: price
-    float_precision: 0
-    color: limegreen
-    opacity: 1
+    extend_to: now
     curve: stepline
     stroke_width: 1.5
-    extend_to: now
-    data_generator: |
-      const data = entity.attributes.forecast || [];
-      return data.map((item) => [item.timestamp, item.value]);
-    show:
-      in_legend: true
-      legend_value: false
+    float_precision: 2
+    color: limegreen
+    opacity: 1
     color_threshold:
-      - value: 3
+      - value: 5
         color: lime
         opacity: 1
-      - value: 6
+      - value: 10
         color: limegreen
         opacity: 1
-      - value: 10
+      - value: 15
         color: gold
         opacity: 1
       - value: 20
@@ -48,35 +42,26 @@ series:
       - value: 30
         color: red
         opacity: 1
-      - value: 30.01
+      - value: 999
         color: darkred
         opacity: 1
-  - entity: sensor.nordpool_predict_fi_upcoming_wind_power
-    name: Tuulivoima, GW
-    type: column
-    yaxis_id: wind
-    float_precision: 2
-    color: "#c7ced6"
-    opacity: 0.35
-    stroke_width: 0
-    curve: stepline
-    extend_to: now
     data_generator: |
-      const data = entity.attributes.windpower_forecast || [];
-      return data.map((item) => [item.timestamp, item.value / 1000]);
+      const data = entity.attributes.forecast || [];
+      return data.map((item) => [item.timestamp, item.value]);
     show:
+      in_chart: true
+      in_header: false
       in_legend: true
       legend_value: false
-  - entity: sensor.nordpool_predict_fi_upcoming_price
-    name: ""
+  - entity: sensor.nordpool_predict_fi_price
     type: area
     yaxis_id: price
+    extend_to: now
+    curve: stepline
+    stroke_width: 0
     float_precision: 1
     color: limegreen
     opacity: 0.16
-    stroke_width: 0
-    curve: stepline
-    extend_to: now
     data_generator: |
       const data = entity.attributes.forecast || [];
       return data.map((item) => [item.timestamp, item.value]);
@@ -85,64 +70,160 @@ series:
       in_header: false
       in_legend: false
       legend_value: false
+  - entity: sensor.nordpool_predict_fi_wind_power
+    name: Tuulivoima
+    type: column
+    yaxis_id: wind
+    float_precision: 0
+    color: skyblue
+    opacity: 0.1
+    extend_to: now
+    stroke_width: 0
+    curve: stepline
+    data_generator: |
+      const data = entity.attributes.windpower_forecast || [];
+      return data.map((item) => [item.timestamp, item.value / 1000]);
+    show:
+      in_chart: true
+      in_header: false
+      in_legend: true
+      legend_value: false
+  - entity: sensor.nordpool_predict_fi_price_now
+    name: Hinta nyt
+    unit: ¢
+    float_precision: 1
+    color: dimgray
+    show:
+      in_chart: false
+      legend_value: false
+      in_header: raw
+      header_color_threshold: true
+    color_threshold:
+      - value: 5
+        color: lime
+        opacity: 1
+      - value: 10
+        color: limegreen
+        opacity: 1
+      - value: 15
+        color: gold
+        opacity: 1
+      - value: 20
+        color: darkorange
+        opacity: 1
+      - value: 30
+        color: red
+        opacity: 1
+      - value: 999
+        color: darkred
+        opacity: 1
+  - entity: sensor.nordpool_predict_fi_price_next_6h
+    name: Seuraavat 6h
+    unit: ¢
+    float_precision: 1
+    color: dimgray
+    color_threshold:
+      - value: 5
+        color: lime
+        opacity: 1
+      - value: 10
+        color: limegreen
+        opacity: 1
+      - value: 15
+        color: gold
+        opacity: 1
+      - value: 20
+        color: darkorange
+        opacity: 1
+      - value: 30
+        color: red
+        opacity: 1
+      - value: 999
+        color: darkred
+        opacity: 1
+    show:
+      in_chart: false
+      legend_value: false
+      header_color_threshold: true
+  - entity: sensor.nordpool_predict_fi_cheapest_6h_price_window
+    name: Halvin 6h
+    unit: ¢
+    float_precision: 1
+    color: dimgray
+    color_threshold:
+      - value: 5
+        color: lime
+        opacity: 1
+      - value: 10
+        color: limegreen
+        opacity: 1
+      - value: 15
+        color: gold
+        opacity: 1
+      - value: 20
+        color: darkorange
+        opacity: 1
+      - value: 30
+        color: red
+        opacity: 1
+      - value: 999
+        color: darkred
+        opacity: 1
+    show:
+      in_chart: false
+      legend_value: false
+      header_color_threshold: true
+  - entity: sensor.nordpool_predict_fi_wind_power
+    name: Tuulivoima
+    float_precision: 0
+    color: skyblue
+    show:
+      in_chart: false
+      in_header: true
+      in_legend: true
+      legend_value: false
 yaxis:
   - id: price
-    min: 0
     decimals: 0
     apex_config:
-      tickAmount: 6
+      tickAmount: 4
       forceNiceScale: true
-      labels:
-        style:
-          colors: rgba(90, 99, 110, 0.6)
       title:
         text: Hinta (¢/kWh)
-        style:
-          color: rgba(102, 109, 120, 0.7)
   - id: wind
     opposite: true
-    min: 0
-    decimals: 1
+    decimals: 0
     apex_config:
-      tickAmount: 6
-      labels:
-        style:
-          colors: rgba(90, 99, 110, 0.85)
+      tickAmount: 4
+      forceNiceScale: true
       title:
         text: Tuulivoima (GW)
-        style:
-          color: rgba(102, 109, 120, 0.9)
 apex_config:
   chart:
+    height: 384
     toolbar:
       show: false
   grid:
-    xaxis:
-      lines:
-        show: true
+    strokeDashArray: 3
   legend:
-    show: true
+    show: false
     customLegendItems:
-      - Senttiä per kWh
-      - Tuulivoima, GW
+      - Sähkön hinta (¢/kWh)
+      - Tuulivoima (GW)
   xaxis:
     type: datetime
     labels:
-      datetimeFormatter:
-        day: dd MMM
+      formatter: |
+        EVAL:function (value, timestamp) {
+          const ts = timestamp || value;
+          const date = new Date(ts);
+          if (Number.isNaN(date.getTime())) {
+            return value;
+          }
+          const days = ['su', 'ma', 'ti', 'ke', 'to', 'pe', 'la'];
+          return days[date.getDay()];
+        }
+  tooltip:
+    enabled: false
   markers:
     size: 0
-  tooltip:
-    shared: true
-    enabledOnSeries:
-      - 0
-      - 1
-      - 3
-    x:
-      format: dd MMM HH:mm
-    "y":
-      formatter: |
-        if (seriesIndex === 0) {
-          return `${value.toFixed(1)} ¢/kWh`;
-        }
-        return `${value.toFixed(2)} GW`;
