chore: update markdown content

--- a/docs/npf_card_narration_en.yaml
+++ b/docs/npf_card_narration_en.yaml
@@ -1,3 +1,5 @@
 type: markdown
 content: |
+  ### Nordpool Forecast
   {{ state_attr('sensor.nordpool_predict_fi_narration_en', 'content') }}
+text_only: true
