chore: update headings, card style

--- a/docs/npf_card_narration_fi.yaml
+++ b/docs/npf_card_narration_fi.yaml
@@ -1,5 +1,4 @@
 type: markdown
 content: |
-  ### Nordpool-ennuste
+  ## Pörssisähkön hintaennuste
   {{ state_attr('sensor.nordpool_predict_fi_narration_fi', 'content') }}
-text_only: true
