--- a/docs/npf_card_summary_fi.yaml
+++ b/docs/npf_card_summary_fi.yaml
@@ -1,5 +1,4 @@
 type: markdown
 content: |
-  ### Nordpool-ennuste
+  ### Pörssisähkön hintaennuste
   {{ states('sensor.nordpool_predict_fi_narration_fi') }}
-text_only: true
