--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "nordpool-predict-fi-hacs"
-version = "2025.10.19.2"
+version = "2025.10.19.3"
 description = "Home Assistant integration for Nordpool FI price predictions"
 readme = "README.md"
 requires-python = ">=3.12"
@@ -8,9 +8,10 @@ dependencies = []
 
 [project.optional-dependencies]
 dev = [
-    "pytest>=8.2",
+    "pytest>=8.4.2",
     "pytest-asyncio>=0.23",
     "pytest-homeassistant-custom-component>=0.13",
+    "pytest-sugar>=1.1.1",
     "ruff>=0.6",
 ]
 
